--- a/examenproject/css/project.css
+++ b/examenproject/css/project.css
@@ -20,10 +20,10 @@
     display: grid;
     grid-gap: 10px;
     grid-template-areas:
-    'gheader gheader'
-    'gmain gmain';
+    'gheader'
+    'gmain';
 
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     height: 97vh;
     grid-template-rows: 1fr 12fr;
 }
@@ -132,10 +132,10 @@ h2 {
     display: grid;
     grid-row-gap: 10px;
     grid-template-areas:
-    'gheader gheader gheader'
-    'gmain gmain gmain';
+    'gheader'
+    'gmain';
 
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     height: 97vh;
     grid-template-rows: 1fr 12fr;
 }
@@ -272,9 +272,17 @@ dd {
 #formulier {
     max-width: 50em;
     margin: 10px auto;
+}
+.gegevens{
+    background-color: white;
+    border-radius: 5px;
 
 }
-
+.legend{
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
 #formulier label {
     display: inline-block;
     width: 500px;
@@ -294,8 +302,6 @@ dd {
 }
 
 .card {
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color: #f1f1f1;*/
     padding: 3px;
     text-align: center;
     max-width: 175px;
@@ -339,7 +345,7 @@ input[type="radio"][id="compact"]:checked ~ section .fullSize {
     display: none;
 }
 
-input[type="radio"][id="full\ size"]:checked ~ section .compact {
+input[type="radio"][id="FullSize"]:checked ~ section .compact {
     display: none;
 }
 
@@ -426,7 +432,7 @@ input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
     color: white;
 }
 
-#full\ size:checked ~ #filter .fullSizeLabel {
+#FullSize:checked ~ #filter .fullSizeLabel {
     background-color: black;
     color: white;
 }
