filter gefixed, formulier aangepast,article vervangen door section

--- a/examenproject/css/project.css
+++ b/examenproject/css/project.css
@@ -8,8 +8,7 @@
 }
 
 .panel {
-    padding: 5px;
-    border-radius: 5px;
+
 }
 
 * {
@@ -26,19 +25,24 @@
     grid-template-columns: 1fr;
     height: 97vh;
     grid-template-rows: 1fr 12fr;
+
 }
 
 .grid-header {
     grid-area: gheader;
     background-color: black;
     text-align: center;
+    padding: 5px;
+    border-radius: 5px;
 
 }
 
 .grid-main {
     grid-area: gmain;
     background-color: gray;
-    padding-bottom: 10px;
+    margin: 0 auto;
+    padding: 5px 0 0 5px;
+    border-radius: 5px;
 }
 
 body {
@@ -194,24 +198,31 @@ h2 {
     margin-left: 1px;
 }
 
-.detail {
-    display: inline-flex;
-    flex-direction: row;
-    height: 500px;
-    padding-bottom: 50px;
-    padding-left: 50px;
+.detail-grid {
+    display: grid;
+    grid-template-areas:
+    'foto eigenschappen'
+    'omschrijving .';
+    grid-gap: 10px;
+    width: 100%;
+    height: auto;
+
 
 }
 
 .eigenschappen {
-    display: inline-flex;
-    flex-direction: column;
-    padding-left: 15em;
+    grid-area: eigenschappen;
 }
 
-.detail h2 {
-    position: fixed;
-    bottom: 2em;
+.detail-grid img {
+    grid-area: foto;
+    width: 40em;
+    height: auto;
+    max-width: 100%;
+}
+
+.detail-grid h2 {
+    grid-area: omschrijving;
 }
 
 /*FAO*/
@@ -229,65 +240,85 @@ dt {
 
 dd {
     min-height: 2em;
-    margin-right: 19em;
-    margin-left: 19em;
-
+    max-width: 70em;
+    margin: auto;
 }
 
 /*contact*/
 .contactgegevens {
     display: grid;
     text-align: center;
+    grid-gap: 10px;
+    padding-right: 10px;
+    grid-template-areas:
+    'h2contactgegevens h2contactgegevens'
+    'naam adres'
+    'email adres'
+    'telefoon adres';
 }
 
 .contactgegevens h2 {
-    grid-column: span 2;
+    grid-area: h2contactgegevens;
 }
 
 #naam {
-    grid-row-start: 2;
-    grid-row-end: 3;
-
+    grid-area: naam;
 }
 
 #email {
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-area: email;
 }
 
 #telefoon {
-    grid-row-start: 4;
-    grid-row-end: 5;
+    grid-area: telefoon;
 }
 
 #adres {
-    grid-row: span 5;
+    grid-area: adres;
+    width: 100%;
+    height: auto;
 }
 
 .contactgegevens section img {
     max-height: 400px;
+    height: auto;
+    width: 100%;
+
 }
 
 /*formulier*/
 #formulier {
     max-width: 50em;
-    margin: 10px auto;
 }
-.gegevens{
+
+.gegevensPersoon {
     background-color: white;
     border-radius: 5px;
-
 }
-.legend{
+
+.gegevensProduct {
+    background-color: white;
+    border-radius: 5px;
+}
+
+.legend {
     background-color: black;
     color: white;
     border-radius: 5px;
 }
-#formulier label {
+
+#formulier .gegevensPersoon label {
     display: inline-block;
-    width: 500px;
+    width: 200px;
     margin-top: 10px;
 }
+
+#formulier .gegevensProduct label {
+    display: inline-block;
+    width: 400px;
+    margin-top: 10px;
+}
+
 
 /*producten*/
 .column {
@@ -378,11 +409,26 @@ input[type="radio"][id="rode"]:checked ~ section .geenLichten {
     display: none;
 }
 
-input[type="radio"][id="geen lichten"]:checked ~ section .blauwe,
-input[type="radio"][id="geen lichten"]:checked ~ section .groene,
-input[type="radio"][id="geen lichten"]:checked ~ section .rode,
-input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
+input[type="radio"][id="geenLichten"]:checked ~ section .blauwe,
+input[type="radio"][id="geenLichten"]:checked ~ section .groene,
+input[type="radio"][id="geenLichten"]:checked ~ section .rode,
+input[type="radio"][id="geenLichten"]:checked ~ section .RBG {
     display: none;
+}
+
+input[type="radio"][id="resetType"]:checked ~ section .normaal,
+input[type="radio"][id="resetType"]:checked ~ section .ergonomic,
+input[type="radio"][id="resetType"]:checked ~ section .opvouwbaar {
+    display: inline-block;
+}
+
+input[type="radio"][id="resetGrootte"]:checked ~ section .fullSize,
+input[type="radio"][id="resetGrootte"]:checked ~ section .compact {
+    display: inline-block;
+}
+
+input[type="radio"][id="resetLichten"]:checked ~ section .resetLichten {
+    display: inline-block;
 }
 
 /*filter opmaak */
@@ -408,6 +454,21 @@ input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
 }
 
 .producten label:hover {
+    background-color: black;
+    color: white;
+}
+
+#resetType:checked ~ #filter .resetTypeLabel {
+    background-color: black;
+    color: white;
+}
+
+#resetGrootte:checked ~ #filter .resetGrootteLabel {
+    background-color: black;
+    color: white;
+}
+
+#resetLichten:checked ~ #filter .resetLichtenLabel {
     background-color: black;
     color: white;
 }
@@ -457,7 +518,7 @@ input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
     color: white;
 }
 
-#geen\ lichten:checked ~ #filter .geenLichtenLabel {
+#geenLichten:checked ~ #filter .geenLichtenLabel {
     background-color: black;
     color: white;
 }
@@ -482,6 +543,7 @@ input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
     margin: 5px 0 5px 0;
 }
 
+
 @media screen and (max-width: 600px) {
     nav ul li {
         display: block;
@@ -491,4 +553,82 @@ input[type="radio"][id="geen lichten"]:checked ~ section .RBG {
     #filter {
         float: none;
     }
+
+    .flex1 {
+        display: inline-flex;
+        flex-direction: column;
+        max-width: 510px;
+        padding: 18px;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .flex2 {
+        display: inline-flex;
+        flex-direction: column;
+        max-width: 510px;
+        padding: 18px;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    .flex3 {
+        display: inline-flex;
+        flex-direction: column;
+        max-width: 510px;
+        padding: 18px;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    dl {
+        text-align: left;
+    }
+
+    dt {
+        border: 1px solid black;
+        border-radius: 5px;
+        display: inline-block;
+        margin-bottom: 5px;
+        margin-top: 5px;
+    }
+
+    dd {
+        margin: auto;
+    }
+
+    .contactgegevens {
+        display: grid;
+        text-align: center;
+        grid-gap: 10px;
+        padding-right: 10px;
+        grid-template-areas:
+    'h2contactgegevens'
+    'naam'
+    'email'
+    'telefoon'
+    'adres';
+    }
+
+    .contactgegevens section img {
+        max-height: 350px;
+    }
+
+    .detail-grid {
+        display: grid;
+        grid-template-areas:
+        'foto'
+        'omschrijving'
+        'eigenschappen';
+        grid-gap: 10px;
+    }
+
+    .detail-grid img {
+        width: 100%;
+    }
+
 }
