--- a/examenproject/css/project.css
+++ b/examenproject/css/project.css
@@ -7,14 +7,18 @@
     left: -10000px;
 }
 
-.panel {
-
+h2 {
+    text-align: center;
+    color: white;
+    font-weight: bolder;
+    border: 5px solid darkgrey;
 }
 
 * {
     box-sizing: border-box;
 }
 
+/* grid voor contact pagina, FAQ pagina en productoverzicht pagina  */
 .grid {
     display: grid;
     grid-gap: 10px;
@@ -50,6 +54,9 @@ body {
 
 }
 
+/*
+menu opmaak
+ */
 nav ul {
     padding: 0;
 }
@@ -70,6 +77,9 @@ a:hover {
 
 }
 
+/*
+opmaak voor submenu
+ */
 .submenu ul {
     display: none;
 }
@@ -107,15 +117,11 @@ a:hover {
 
 }
 
+/*
+aanduiden waar je op de pagina bent
+ */
 .current {
     color: lightskyblue;
-}
-
-h2 {
-    text-align: center;
-    color: white;
-    font-weight: bolder;
-    border: 5px solid darkgrey;
 }
 
 /*index*/
@@ -172,7 +178,7 @@ h2 {
     justify-content: space-evenly;
 }
 
-/* hier komt product detail pagaina*/
+/* hier komt product detail pagina*/
 .breadcrumbs {
     border-radius: 0.3rem;
     display: inline-flex;
@@ -213,6 +219,9 @@ h2 {
     margin-left: 1px;
 }
 
+/*
+grid voor de productdetail pagina
+ */
 .detail-grid {
     display: grid;
     grid-template-areas:
@@ -262,7 +271,7 @@ dd {
     margin: auto;
 }
 
-/*contact*/
+/*contact gegevens grid in main*/
 .contactgegevens {
     display: grid;
     grid-gap: 10px;
@@ -308,6 +317,9 @@ dd {
 
 }
 
+/*
+opmaak van de contactgegevens
+ */
 .contactgegevens section img {
     width: 60%;
 }
@@ -359,37 +371,37 @@ dd {
     margin-top: 10px;
 }
 
+/*
+fout bericht voor M7
+ */
 span {
     color: red;
 }
 
+/*
+dit is ook voor M7
+ */
 input::before:focus {
     background-color: yellow;
 }
 
-/*producten*/
+/*producten pagina*/
+
+/*
+een column voor elke categorie
+ */
 .column {
     display: inline-block;
     padding: 0;
 }
 
+/*
+opmaak tekst voor product naam en prijs
+ */
 .column p {
     background-color: white;
     font-size: 80%;
     margin: 0;
-}
-
-.card {
-    padding: 3px;
-    text-align: center;
-    max-width: 175px;
-
-}
-
-.card img {
-    max-width: 160px;
-    border: 5px solid black;
-    background-color: white;
 }
 
 .row h4 {
@@ -398,6 +410,24 @@ input::before:focus {
     width: 160px;
 }
 
+/*
+opmaak voor elk product
+ */
+.card {
+    padding: 3px;
+    text-align: center;
+    max-width: 175px;
+}
+
+.card img {
+    max-width: 160px;
+    border: 5px solid black;
+    background-color: white;
+}
+
+/*
+opmaak voor titels van categorie
+ */
 .producten h3 {
     background-color: #f1f1f1;
     width: 10em;
@@ -467,6 +497,9 @@ input[type="radio"][id="geenLichten"]:checked ~ section .RBG {
     display: none;
 }
 
+/*
+reset knop voor elke filter
+ */
 input[type="radio"][id="resetType"]:checked section .normaal,
 input[type="radio"][id="resetType"]:checked section .ergonomic,
 input[type="radio"][id="resetType"]:checked section .opvouwbaar {
@@ -491,16 +524,6 @@ input[type="radio"][id="resetLichten"]:checked section .geenLichten {
     display: none;
 }
 
-#reset {
-    display: inline-block;
-    border-radius: 5px;
-}
-
-#reset:hover {
-    background-color: white;
-    color: black;
-}
-
 .producten label {
     border: 1px solid black;
     border-radius: 5px;
@@ -510,11 +533,38 @@ input[type="radio"][id="resetLichten"]:checked section .geenLichten {
     cursor: pointer;
 }
 
+#filter {
+    float: right;
+    display: inline-block;
+    border: 5px solid black;
+    padding: 3px 30px 1px 10px;
+    color: black;
+}
+
+.filterType {
+    margin: 5px 0 5px 0;
+}
+
+.filtergrootte {
+    margin: 5px 0 5px 0;
+
+}
+
+.filterLichten {
+    margin: 5px 0 5px 0;
+}
+
+/*
+hover effect van filters
+ */
 .producten label:hover {
     background-color: white;
     color: black;
 }
 
+/*
+filter verandert van kleur wanneer het actief is
+ */
 #resetType:checked ~ #filter .resetTypeLabel {
     background-color: white;
     color: black;
@@ -579,28 +629,6 @@ input[type="radio"][id="resetLichten"]:checked section .geenLichten {
     background-color: white;
     color: black;
 }
-
-#filter {
-    float: right;
-    display: inline-block;
-    border: 5px solid black;
-    padding: 3px 30px 1px 10px;
-    color: black;
-}
-
-.filterType {
-    margin: 5px 0 5px 0;
-}
-
-.filtergrootte {
-    margin: 5px 0 5px 0;
-
-}
-
-.filterLichten {
-    margin: 5px 0 5px 0;
-}
-
 
 @media screen and (max-width: 600px) {
     nav ul li {
